22gxhez CRUD for individuals (#20)
* 22gxhez CRUD for individuals

* create individual with relation
* create individual as tree root
* delete individual and its relations
* edit root id of a family tree

* Different message for /tree endpoint

* Fix accidental rollback while creating individual
