# fam_tree_rest_api/api/openapi.yaml
@@ -28,11 +28,21 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
+
+  /individuals/{username}:
     post:
       summary: 'Create an individual'
+      description: 'Allows creating individual in an already existing family or creating individual as a root for the new family'
       operationId: createIndividual
       tags:
         - individuals
+      parameters:
+        - in: path
+          name: username
+          schema:
+            type: string
+          required: true
+          description: Individual/family author's username 
       requestBody:
         $ref: '#/components/requestBodies/IndividualBodyPost'
       responses:
@@ -44,23 +54,9 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-    put:
-      summary: 'Update or create individual'
-      operationId: putIndividual
-      tags:
-        - individuals
-      requestBody:
-        $ref: '#/components/schemas/Individual'
-      responses:
-        '200':
-          description: Updated or created
-        default:
-          description: Unexpected error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-    delete/{id}:
+
+  /individuals/{id}:
+    delete:
       summary: Delete an individual
       parameters:
         - in: path
@@ -73,8 +69,10 @@ paths:
       tags:
         - individuals
       responses:
-        '204':
+        '200':
           description: Deleted requested individual
+        '406':
+          description: Requested individual cannot be deleted because it is the root of its family. You can change root_id of the family 
         default:
           description: Unexpected error
           content:
@@ -136,7 +134,7 @@ paths:
           content:
             application/json:
               schema:
-                type: objects
+                type: object
                 $ref: '#/components/schemas/FamTreeWithInformation'
         default:
           description: Unexpected error
@@ -145,6 +143,53 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
+  /families:
+    post:
+      operationId: addFamily 
+      tags:
+        - families 
+      requestBody:
+        $ref: '#/components/schemas/Family'
+      responses:
+        '201':
+          description: Created new relation
+        default:
+          description: Unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+  /families/{family_id}:
+    patch:
+      summary: Change root id of a family
+      parameters:
+        - in: path
+          name: family_id 
+          schema:
+            type:  integer
+          required: true
+          description: Id of the family
+      operationId: ChangeRootIdFamily 
+      tags:
+        - families 
+      requestBody:
+        $ref: '#/components/requestBodies/NewRootId'
+      responses:
+        '200':
+          description: Family tree structure and basic information about the individuals in the family
+          content:
+            application/json:
+              schema:
+                type: object
+                $ref: '#/components/schemas/Family'
+        default:
+          description: Unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
+    
   /health:
     get:
       summary: Health check endpoint
@@ -249,6 +294,16 @@ components:
           type: array
           $ref: "#/components/schemas/VecOfPreparedRelations"
 
+    Family:
+      type: object
+      properties:
+        author_username:
+          type: string
+        root_id: 
+          type: string
+        family_name:
+          type: string
+
 
     VecOfPreparedRelations:
       type: array
@@ -286,6 +341,18 @@ components:
       scheme: bearer
 
   requestBodies:
+    NewRootId:
+      description: Changing root id of a family
+      required: true
+      content:
+        application/json:
+          schema:
+            properties:
+              old_id:
+                type: string
+              new_id: 
+                type: string
+
     IndividualBodyPost:
       description: Example request body
       required: true
