# fam_tree_rest_api/api/src/controller/family_controller.rs
@@ -1,5 +1,6 @@
 use actix_web::{delete, get, patch, post, web, HttpResponse, Responder};
-use serde::Serialize;
+use log::debug;
+use serde::{Deserialize, Serialize};
 
 use super::individuals_controller::IndividualId;
 use super::AppState;
@@ -11,7 +12,8 @@ pub fn init(cfg: &mut web::ServiceConfig) {
     cfg.service(
         web::scope("/families")
             .service(create_family)
-            .service(get_family),
+            .service(get_family)
+            .service(change_root),
     );
 }
 
@@ -39,6 +41,35 @@ async fn get_family(
         .context
         .families
         .get_family(id.id, family_id.into_inner())
+        .await?;
+
+    Ok(HttpResponse::Ok().json(family))
+}
+
+#[derive(Deserialize)]
+struct NewRootId {
+    old_id: String,
+    new_id: String,
+}
+
+#[patch("/{family_id}")]
+async fn change_root(
+    family_id: web::Path<i32>,
+    ids: web::Json<NewRootId>,
+    app_state: web::Data<AppState<'_>>,
+) -> Result<HttpResponse, AppError> {
+    let ids = ids.into_inner();
+    let family_id = family_id.into_inner();
+
+    debug!("{}", family_id);
+    let family = app_state
+        .context
+        .families
+        .change_root_id(
+            family_id,
+            ids.new_id.parse::<i32>().unwrap(),
+            ids.old_id.parse::<i32>().unwrap(),
+        )
         .await?;
 
     Ok(HttpResponse::Ok().json(family))
