# fam_tree_rest_api/api/src/controller/individuals_controller.rs
@@ -4,7 +4,7 @@ use serde::{Deserialize, Serialize};
 use super::AppState;
 use crate::errors::AppError;
 use crate::models::relationships::{RelType, Role};
-use crate::models::{Individual, Relationship};
+use crate::models::{Family, Individual, Relationship};
 use log::debug;
 
 pub fn init(cfg: &mut web::ServiceConfig) {
@@ -55,20 +55,23 @@ struct PostIndividualBodyReq {
     pub role: Option<Role>,
 }
 
-#[post("")]
+#[post("/{username}")]
 async fn create_individual(
     app_state: web::Data<AppState<'_>>,
+    username: web::Path<String>,
     body: web::Json<PostIndividualBodyReq>,
 ) -> Result<impl Responder, AppError> {
     let body = body.into_inner();
     let individual = body.ind;
 
-    let query_res = app_state
+    let res = app_state
         .context
         .individuals
         .create_individual(&individual)
         .await?;
-
+    //.create_individual(&individual)
+    //.await?;
+    let (query_res, transaction) = res;
     let ind_id = IndividualId { id: query_res };
 
     if body.relative.is_some() && body.relation.is_some() && body.role.is_some() {
@@ -82,6 +85,7 @@ async fn create_individual(
             body.role.unwrap(),
         );
 
+        transaction.commit().await;
         let query_res = app_state
             .context
             .relationships
@@ -92,7 +96,30 @@ async fn create_individual(
         app_state
             .context
             .families
-            .create_individual_family_rel(relative_id, ind_id.id)
+            .create_individual_family_rel(None, Some(relative_id), ind_id.id)
+            .await?;
+    } else {
+        let family = Family {
+            id: None,
+            author_username: username.into_inner(),
+            root_id: ind_id.id,
+        };
+        let family_id = match app_state.context.families.create_family(&family).await {
+            Ok(id) => {
+                transaction.commit().await;
+                id
+            }
+            Err(e) => {
+                debug!("{}", e);
+                transaction.rollback().await;
+                return Err(AppError::from(e));
+            }
+        };
+
+        app_state
+            .context
+            .families
+            .create_individual_family_rel(Some(family_id), None, ind_id.id)
             .await?;
     }
 
@@ -104,11 +131,36 @@ async fn delete_individual(
     id: web::Path<i32>,
     app_state: web::Data<AppState<'_>>,
 ) -> Result<impl Responder, AppError> {
-    let query_res = app_state
+    let ind_id = id.into_inner();
+
+    if app_state.context.families.is_root_of_family(ind_id).await? == true {
+        let response_body = serde_json::json!({
+            "success": false,
+            "error": "root of the tree can not be deleted"
+        });
+        return Ok(HttpResponse::NotAcceptable().json(response_body));
+    }
+
+    app_state
         .context
-        .individuals
-        .delete_individual(id.into_inner())
+        .relationships
+        .delete_relation_for_individual_x(ind_id)
         .await?;
 
-    Ok(HttpResponse::NoContent())
+    app_state
+        .context
+        .families
+        .delete_family_to_ind_rels(ind_id)
+        .await?;
+
+    app_state
+        .context
+        .individuals
+        .delete_individual(ind_id)
+        .await?;
+
+    let response_body = serde_json::json!({
+        "success": true
+    });
+    Ok(HttpResponse::Ok().json(response_body))
 }
